--- a/ostrovityanov-politeconomia/EPUB/Text/00_introduction.xhtml
+++ b/ostrovityanov-politeconomia/EPUB/Text/00_introduction.xhtml
@@ -2,26 +2,92 @@
 <!DOCTYPE html>
 <html
     xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
-
 <head>
-  <title>Введение</title>
+  <title>ВВЕДЕНИЕ</title>
 </head>
-
 <body>
-  <h1>Введение</h1>
+  <h1>ВВЕДЕНИЕ</h1>
   <p>
-    Политическая экономия относится к числу общественных наук1. Она изучает законы общественного 
-    производства и распределения материальных благ на различных ступенях развития человеческого общества.
+    Политическая экономия относится к числу общественных наук
+    <a id="note1-marker" href="_notes.xhtml#note1" epub:type="noteref"><sup>1</sup></a>.
+    Она изучает законы общественного производства и распределения материальных благ на различных 
+    ступенях развития человеческого общества.
   </p>
   <p>
-    Основой жизни общества является материальное производство. Чтобы жить, люди должны иметь пищу, одежду
-     и другие материальные блага. Чтобы иметь эти блага, люди должны производить их, должны трудиться.
+    Основой жизни общества является материальное производство. Чтобы жить, люди должны иметь пищу, 
+    одежду и другие материальные блага. Чтобы иметь эти блага, люди должны производить их, должны 
+    трудиться.
   </p>
   <p>
-    Люди производят материальные блага, то есть ведут борьбу с природой, не в одиночку, а сообща, группами, 
-    обществами. Следовательно, производство всегда и при всех условиях является <i>общественным</i> производством, 
-    а труд – деятельностью <i>общественного</i> человека.
+    Люди производят материальные блага, то есть ведут борьбу с природой, не в одиночку, а сообща, 
+    группами, обществами. Следовательно, производство всегда и при всех условиях является 
+    <i>общественным</i> производством, а труд – деятельностью <i>общественного</i> человека.
+  </p>
+  <p>
+    Процесс производства материальных благ предполагает следующие моменты: 1) труд человека, 
+    2) предмет труда и 3) средства труда.
+  </p>
+  <p>
+    <i>Труд</i> есть целесообразная- деятельность человека, в процессе которой он видоизменяет и 
+    приспособляет предметы природы для удовлетворения своих потребностей. Труд является 
+    естественной необходимостью, непременным условием существования людей. Без труда была 
+    бы невозможна сама человеческая жизнь.
+  <p>
+    <i>Предметом труда</i> является всѐ то, на что направлен труд человека. Предметы труда 
+    могут быть непосредственно даны самой природой, например дерево, которое рубят в лесу, или 
+    руда, которую извлекают из недр земли. Предметы труда, которые раньше подверглись 
+    воздействию труда, например руда на металлургическом заводе, хлопок на прядильной 
+    фабрике, носят название сырья или сырых материалов.
+  </p>
+  <p>
+    <i>Средствами труда</i> являются все те вещи, при помощи которых человек воздействует на 
+    предмет своего труда и видоизменяет его. К средствам труда принадлежат прежде всего орудия 
+    производства, а также земля, производственные здания, дороги, каналы, склады и т. д. В 
+    составе средств труда определяющая роль принадлежит <i>орудиям производства</i>. К ним 
+    относятся многообразные орудия, которые человек применяет в своей трудовой деятельности, 
+    начиная с грубых каменных орудий первобытных людей и кончая современными машинами. 
+    Уровень развития орудий производства служит мерилом власти общества над. природой, 
+    мерилом развития производства. Экономические эпохи различаются не тем, что производится, а 
+    тем, как производится, какими орудиями производства.
+  </p>
+  <p>
+    Предметы труда и средства труда составляют <i>средства производства</i>. Средства производства 
+    сами по себе, вне соединения с рабочей силой, представляют лишь груду мѐртвых вещей. Для того 
+    чтобы мог начаться процесс труда, рабочая сила должна соединиться с орудиями производства.
+  </p>
+  <p>
+    <i>Рабочая сила</i> есть способность человека к труду, совокупность физических и духовных сил 
+    человека, благодаря которым он в состоянии производить материальные блага. Рабочая сила – 
+    активный элемент производства, она приводит в движение средства производства. С развитием 
+    орудий производства развивается и способность человека к труду, его уменье, навыки, 
+    производственный опыт.
+  </p>
+  <p>
+    Орудия производства, при помощи которых производятся материальные блага, люди, приводящие в 
+    движение эти орудия и осуществляющие производство материальных благ благодаря известному 
+    производственному опыту и навыкам к труду, составляют производительные силы общества. 
+    Трудящиеся массы являются основной производительной силой человеческого общества на всех 
+    этапах его развития.
+  </p>
+  <p>
+    Производительные силы выражают отношение людей к предметам и силам природы, используемым для 
+    производства материальных благ. Однако в производстве люди воздействуют не только на природу, 
+    но и друг на друга. «Они не могут производить, не соединяясь известным образом для совместной 
+    деятельности и для взаимного обмена своей деятельностью. Чтобы производить, люди вступают в 
+    определенные связи и отношения, и только через посредство этих общественных связей и отношений 
+    существует их отношение к природе, имеет место производство»2. Определѐнные связи и отношения 
+    людей в процессе производства материальных благ составляют <i>производственные отношения</i>.
+  </p>
+  <p>
+    Характер производственных отношений зависит от того, в чьей собственности находятся средства 
+    производства (земля, леса, воды, недра, сырые материалы, орудия производства, производственные 
+    здания, средства сообщения и связи и т. п.) – в собственности отдельных лиц, социальных групп 
+    или классов, использующих эти средства для эксплуатации трудящихся, или в собственности 
+    общества, целью которого является удовлетворение материальных и культурных потребностей 
+    народных масс, всего общества. Состояние производственных отношений показывает, как 
+    распределяются между членами общества средства производства и, следовательно, также и 
+    материальные блага, производимые людьми. Таким образом, основой производственных отношений 
+    является определѐнная форма собственности на средства производства.
   </p>
 </body>
-
 </html>
