--- a/ostrovityanov-politeconomia/EPUB/Text/25_chapter.xhtml
+++ b/ostrovityanov-politeconomia/EPUB/Text/25_chapter.xhtml
@@ -4,12 +4,13 @@
     xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
     <title>ГЛАВА VIII. ЗАРАБОТНАЯ ПЛАТА</title>
+    <link rel="stylesheet" type="text/css" href="../Styles/style-page.css" />
     <link rel="stylesheet" type="text/css" href="../Styles/style.css" />
 </head>
-<body>
-    <h2>ГЛАВА VIII.</h3>
-    <h2>ЗАРАБОТНАЯ ПЛАТА</h3>
-    <h3>Цена рабочей силы. Сущность заработной платы.</h3>
+<body class="page">
+    <div>
+    <div class="subt">ГЛАВА VIII. ЗАРАБОТНАЯ ПЛАТА</div>
+    <div class="subt">Цена рабочей силы. Сущность заработной платы.</div>
     <div class="para">
     При капиталистическом способе производства рабочая сила, подобно всякому другому 
     товару, имеет стоимость. Стоимость рабочей силы, выраженная в деньгах, есть <i>цена рабочей</i> 
@@ -64,9 +65,6 @@
     стоимость рабочей силы.
     </div>
     <div class="para">
-
-    </div>
-    <div class="para">
     Капиталист покупает на рынке не труд, а особый товар – рабочую силу. Потребление 
     рабочей силы, то есть расходование мускульной, нервной, мозговой энергии рабочего, есть 
     процесс труда. Заработная плата является оплатой лишь <i>части</i> рабочего дня. Стоимость 
@@ -97,7 +95,7 @@
     прибавочное рабочее время, на оплаченный и неоплаченный труд и таким образом маскирует 
     отношение капиталистической эксплуатации.
     </div>
-    <h3>Основные формы заработной платы.</h3>
+    <div class="subt">Основные формы заработной платы.</div>
     <div class="para">
     Основными формами заработной платы являются: 1) повременная и 2) поштучная (сдельная).
     </div>
@@ -230,7 +228,7 @@
     Капиталистическая сдельщина лежит в основе потогонных систем заработной платы, применяемых 
     в буржуазных странах.
     </div>
-    <h3>Потогонные системы заработной платы.</h3>
+    <div class="subt">Потогонные системы заработной платы.</div>
     <div class="para">
     Важнейшей чертой капиталистической сдельщины является безмерная интенсификация 
     труда, выматывающая все силы работника. При этом заработная плата не возмещает 
