--- a/ostrovityanov-politeconomia/EPUB/Text/_notes.xhtml
+++ b/ostrovityanov-politeconomia/EPUB/Text/_notes.xhtml
@@ -3,17 +3,19 @@
 <html
     xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-    <title>ВВЕДЕНИЕ</title>
+    <title>СНОСКИ</title>
+    <link rel="stylesheet" type="text/css" href="../Styles/style-page.css" />
+    <link rel="stylesheet" type="text/css" href="../Styles/style.css" />
 </head>
 <body>
     <aside id="note1" epub:type="footnote">
-        <p>
+        <div class="para">
             <sup><a href="00_introduction.xhtml#note1-marker">1</a></sup> 
             Название науки «политическая экономия» происходит от греческих слов: «политейа» и 
             «ойкономия». Слово «политейа» означает «общественное устройство». Слово «ойкономия» в 
             свою очередь состоит из двух слов: «ойкос» – дом, Домохозяйство и «номос» – закон. 
             Название науки «политическая экономия» появилось лишь в начале XVII века.
-        </p>
+        </div>
     </aside>
 </body>
 </html>
