--- a/ostrovityanov-politeconomia/EPUB/Text/_nav.xhtml
+++ b/ostrovityanov-politeconomia/EPUB/Text/_nav.xhtml
@@ -12,14 +12,29 @@
     <nav epub:type="toc" id="toc" role="doc-toc">
         <h1>Оглавление</h1>
         <ol>
-            <li><a href="../Text/00_introduction.xhtml">Начало</a></li>
+            <li><a href="../Text/00_introduction.xhtml">ВВЕДЕНИЕ</a></li>
+            <li><a href="../Text/10_section.xhtml">РАЗДЕЛ ПЕРВЫЙ. ДОКАПИТАЛИСТИЧЕСКИЕ СПОСОБЫ ПРОИЗВОДСТВА</a>
+                <ol>
+                    <li><a href="../Text/11_chapter.xhtml">ГЛАВА I. ПЕРВОБЫТНО–ОБЩИННЫЙ СПОСОБ ПРОИЗВОДСТВА</a></li>
+                    <li><a href="../Text/12_chapter.xhtml">ГЛАВА II. </a></li>
+                    <li><a href="../Text/13_chapter.xhtml">ГЛАВА III. </a></li>
+                </ol>
+            </li>
+            <li><a href="../Text/20_section.xhtml">РАЗДЕЛ ВТОРОЙ. </a>
+                <ol>
+                    <li><a href="../Text/21_chapter.xhtml">ГЛАВА IV. </a></li>
+                    <li><a href="../Text/22_chapter.xhtml">ГЛАВА V. </a></li>
+                    <li><a href="../Text/23_chapter.xhtml">ГЛАВА VI. </a></li>
+                    <li><a href="../Text/24_chapter.xhtml">ГЛАВА VII. </a></li>
+                    <li><a href="../Text/25_chapter.xhtml">ГЛАВА VIII. ЗАРАБОТНАЯ ПЛАТА</a></li>
+                </ol>
+            </li>
         </ol>
     </nav>
-
     <nav epub:type="landmarks" id="landmarks" hidden="">
-        <h2>Пометки</h2>
+        <h2>Сноски</h2>
         <ol>
-            <li><a epub:type="toc" href="#toc">Оглавление</a></li>
+            <li><a epub:type="toc" href="#toc">Сноски</a></li>
         </ol>
     </nav>
 </body>
