feat(politeconomia): 25_chapter done

--- a/ostrovityanov-politeconomia/EPUB/Text/_notes.xhtml
+++ b/ostrovityanov-politeconomia/EPUB/Text/_notes.xhtml
@@ -10,11 +10,47 @@
 <body>
     <aside id="note1" epub:type="footnote">
         <div class="para">
-            <sup><a href="00_introduction.xhtml#note1-marker">1</a></sup> 
-            Название науки «политическая экономия» происходит от греческих слов: «политейа» и 
-            «ойкономия». Слово «политейа» означает «общественное устройство». Слово «ойкономия» в 
-            свою очередь состоит из двух слов: «ойкос» – дом, Домохозяйство и «номос» – закон. 
-            Название науки «политическая экономия» появилось лишь в начале XVII века.
+        <sup><a href="00_introduction.xhtml#note1-mark">1</a></sup> 
+        Название науки «политическая экономия» происходит от греческих слов: «политейа» и 
+        «ойкономия». Слово «политейа» означает «общественное устройство». Слово «ойкономия» в 
+        свою очередь состоит из двух слов: «ойкос» – дом, Домохозяйство и «номос» – закон. 
+        Название науки «политическая экономия» появилось лишь в начале XVII века.
+        </div>
+    </aside>
+    <aside id="note38" epub:type="footnote">
+        <div class="para">
+        <sup><a href="25_chapter.xhtml#note38-mark">38</a></sup> 
+        <i>К. Маркс</i>, Критика Готской программы, <i>К . Маркс, Ф. Энгельс</i>, Избранные произведения, т. II, 1948, стр. 20.
+        </div>
+    </aside>
+    <aside id="note39" epub:type="footnote">
+        <div class="para">
+        <sup><a href="25_chapter.xhtml#note39-mark">39</a></sup> 
+        <i>К. Маркс</i> Капитал, т. I, 1953, стр. 548.
+        </div>
+    </aside>
+    <aside id="note40" epub:type="footnote">
+        <div class="para">
+        <sup><a href="25_chapter.xhtml#note40-mark">40</a></sup> 
+        <i>К. Маркс</i> Наемный труд и капитал, <i>К.. Маркс, Ф. Энгельс</i>, Избранные произведения, т. I, 1948, стр. 76.
+        </div>
+    </aside>
+    <aside id="note41" epub:type="footnote">
+        <div class="para">
+        <sup><a href="25_chapter.xhtml#note41-mark">41</a></sup> 
+        <i>В. И. Ленин</i>, «Научная» система выжимания пота. Сочинения, т. 18, стр. 556.
+        </div>
+    </aside>
+    <aside id="note42" epub:type="footnote">
+        <div class="para">
+        <sup><a href="25_chapter.xhtml#note42-mark">42</a></sup> 
+        <i>К. Маркс</i>, Заработная плата, цена и прибыль, <i>К. Маркс, Ф. Энгельс</i>, Избранные произведения, т. I, 1948, стр. 406.
+        </div>
+    </aside>
+    <aside id="note43" epub:type="footnote">
+        <div class="para">
+        <sup><a href="25_chapter.xhtml#note43-mark">43</a></sup> 
+        <i>К. Маркс</i>, Капитал, т. I, 1953, стр. 179.
         </div>
     </aside>
 </body>
