--- a/ostrovityanov-politeconomia/EPUB/Text/_nav.xhtml
+++ b/ostrovityanov-politeconomia/EPUB/Text/_nav.xhtml
@@ -25,7 +25,7 @@
                     <li><a href="../Text/21_chapter.xhtml">ГЛАВА IV. </a></li>
                     <li><a href="../Text/22_chapter.xhtml">ГЛАВА V. </a></li>
                     <li><a href="../Text/23_chapter.xhtml">ГЛАВА VI. </a></li>
-                    <li><a href="../Text/24_chapter.xhtml">ГЛАВА VII. </a></li>
+                    <li><a href="../Text/24_chapter.xhtml">ГЛАВА VII. КАПИТАЛ И ПРИБАВОЧНАЯ СТОИМОСТЬ. ОСНОВНОЙ ЭКОНОМИЧЕСКИЙ ЗАКОН КАПИТАЛИЗМА</a></li>
                     <li><a href="../Text/25_chapter.xhtml">ГЛАВА VIII. ЗАРАБОТНАЯ ПЛАТА</a></li>
                 </ol>
             </li>
