feat(politeconomia): 24_chapter done

--- a/ostrovityanov-politeconomia/EPUB/Text/_notes.xhtml
+++ b/ostrovityanov-politeconomia/EPUB/Text/_notes.xhtml
@@ -17,6 +17,42 @@
         Название науки «политическая экономия» появилось лишь в начале XVII века.
         </div>
     </aside>
+    <aside id="note33" epub:type="footnote">
+        <div class="para">
+        <sup><a href="24_chapter.xhtml#note33-mark">33</a></sup> 
+        <i></i>
+        </div>
+    </aside>
+    <aside id="note33" epub:type="footnote">
+        <div class="para">
+        <sup><a href="24_chapter.xhtml#note33-mark">33</a></sup> 
+        <i>К. Маркс</i>, Критика Готской программы, <i>К. Маркс, Ф. Энгельс,</i> Избранные произведения, т. II, 194 S, стр. 16.
+        </div>
+    </aside>
+    <aside id="note34" epub:type="footnote">
+        <div class="para">
+        <sup><a href="24_chapter.xhtml#note34-mark">34</a></sup> 
+        <i>К. Маркс,</i> Капитал, т. I, 1953, стр. 177.
+        </div>
+    </aside>
+    <aside id="note35" epub:type="footnote">
+        <div class="para">
+        <sup><a href="24_chapter.xhtml#note35-mark">35</a></sup> 
+        <i>К. Маркс,</i> Капитал, т. I, 1953, стр. 624.
+        </div>
+    </aside>
+    <aside id="note36" epub:type="footnote">
+        <div class="para">
+        <sup><a href="24_chapter.xhtml#note36-mark">36</a></sup> 
+        <i>К. Маркс,</i> Капитал, т. I, 1953, стр. 238.
+        </div>
+    </aside>
+    <aside id="note37" epub:type="footnote">
+        <div class="para">
+        <sup><a href="24_chapter.xhtml#note37-mark">37</a></sup> 
+        <i>В. И. Ленин,</i> Государство и революция, Сочинения, т. 25, стр. 376.
+        </div>
+    </aside>
     <aside id="note38" epub:type="footnote">
         <div class="para">
         <sup><a href="25_chapter.xhtml#note38-mark">38</a></sup> 
