--- a/ostrovityanov-politeconomia/EPUB/Text/nav.xhtml
+++ b/ostrovityanov-politeconomia/EPUB/Text/nav.xhtml
@@ -2,15 +2,13 @@
 <!DOCTYPE html>
 <html
     xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="ru-RU">
-
 <head>
     <title>Оглавление</title>
     <meta charset="utf-8" />
 </head>
-
-<body epub:type="frontmatter">
+<body>
+    <h1>Оглавление</h1>
     <nav epub:type="toc" id="toc" role="doc-toc">
-        <h1>Оглавление</h1>
         <ol>
             <li><a href="../Text/00_introduction.xhtml">ВВЕДЕНИЕ</a></li>
             <li><a href="../Text/10_section.xhtml">РАЗДЕЛ ПЕРВЫЙ. ДОКАПИТАЛИСТИЧЕСКИЕ СПОСОБЫ ПРОИЗВОДСТВА</a>
@@ -23,8 +21,6 @@
             <li><a href="../Text/20_section.xhtml">РАЗДЕЛ ВТОРОЙ. </a>
                 <ol>
                     <li><a href="../Text/21_chapter.xhtml">ГЛАВА IV. </a></li>
-                    <li><a href="../Text/22_chapter.xhtml">ГЛАВА V. </a></li>
-                    <li><a href="../Text/23_chapter.xhtml">ГЛАВА VI. </a></li>
                     <li><a href="../Text/24_chapter.xhtml">ГЛАВА VII. КАПИТАЛ И ПРИБАВОЧНАЯ СТОИМОСТЬ. ОСНОВНОЙ ЭКОНОМИЧЕСКИЙ ЗАКОН КАПИТАЛИЗМА</a></li>
                     <li><a href="../Text/25_chapter.xhtml">ГЛАВА VIII. ЗАРАБОТНАЯ ПЛАТА</a></li>
                 </ol>
@@ -32,11 +28,7 @@
         </ol>
     </nav>
     <nav epub:type="landmarks" id="landmarks" hidden="">
-        <h2>Сноски</h2>
-        <ol>
-            <li><a epub:type="toc" href="#toc">Сноски</a></li>
-        </ol>
+        
     </nav>
 </body>
-
 </html>
